<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/apart"
            android:icon="@drawable/ic_folder"
            android:tint="@color/colorWhite"
            android:title="@string/movements"/>

        <item
            android:id="@+id/info"
            android:icon="@drawable/ic_profile"
            android:tint="@color/colorWhite"
            android:title="@string/profile" />

        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_settings"
            android:tint="@color/colorWhite"
            android:title="@string/settings" />

        <item
            android:id="@+id/action_exit"
            android:icon="@drawable/ic_exit"
            android:tint="@color/colorWhite"
            android:title="@string/exit" />


    </group>
</menu>