<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="udea.edu.co.app_accounting.PrincipalFragment"
    android:background="@color/colorGrey">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="150dp"
            android:layout_height="68dp"
            android:text="@string/saldo"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="18dp"/>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@color/colorWhite">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ingresos"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="18dp"
                android:drawableLeft="@drawable/ic_add_circle_black_24dp"
                android:drawablePadding="5dp"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gastos"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="18dp"
                android:drawableLeft="@drawable/ic_minus"
                android:drawablePadding="5dp"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/presupuesto"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="18dp"
                android:drawableLeft="@drawable/ic_sunny"
                android:drawablePadding="5dp"
                android:singleLine="true"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
