<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context="udea.edu.co.app_accounting.IndexActivity">
        android:foregroundGravity="center">

    <ScrollView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ic_user"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@mipmap/logo2"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"/>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:layout_marginTop="15dp">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/text_index"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btnregistrar"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="170dp"
                    android:background="@android:color/background_light"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/btn_register"
                    android:textColor="?attr/actionModeSplitBackground"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>

                <Button
                    android:id="@+id/btnIngresar"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBlue"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/btn_login"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

