<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="udea.edu.co.app_accounting.PrincipalFragment"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:weightSum="1"
    android:background="@color/colorGrey">


    <TextView
        android:id="@+id/saldo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/transactions"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="0.13"
        android:orientation="horizontal"
        android:weightSum="1"
        android:background="@drawable/rounded_layout"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/saldoTransactions"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/saldo"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_weight="0.44" />

        <TextView
            android:id="@+id/balanceTransaction"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/balance"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_weight="0.66" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/rounded_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.13"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textIngresos"
                android:layout_width="139dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@drawable/ic_add_circle_black_24dp"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="Ingreso nómina"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_weight="0.44" />

            <TextView
                android:id="@+id/ingresosresult"
                android:layout_width="105dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:singleLine="true"
                android:text="$1.000.000.00"
                android:textColor="@color/colorGreen"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_weight="0.66" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.13"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textGastos"
                android:layout_width="139dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@drawable/ic_minus"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="Pago servicios"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_weight="0.44" />

            <TextView
                android:id="@+id/gastosresult"
                android:layout_width="105dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:singleLine="true"
                android:text="$500.000.00"
                android:textColor="@color/colorRed"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_weight="0.66" />
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            />


    </LinearLayout>



</LinearLayout>
